[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flying Enemy Head/Flying Head Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_1_Scripts/flyer.gd" type="Script" id=2]
[ext_resource path="res://Audio/Level_1_Sounds/prototyping_sounds/Plink-sounds-headshot-or-armor-break-20220331-163453.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster6.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster7.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster8.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Flying Enemy/Flames Coming From Jets/Flame For Flying Monster5.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "flame",
"speed": 25.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 41.5
height = 28.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 41.0
height = 30.0

[node name="flyer_node" type="Node2D"]
scale = Vector2( 0.8, 0.8 )

[node name="flyer" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )
distance_from_origin = 150
move_speed = 200

[node name="rocket_flame" type="AnimatedSprite" parent="flyer"]
position = Vector2( 11, 69 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 3 )
animation = "flame"
frame = 5
playing = true

[node name="Sprite" type="Sprite" parent="flyer"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="flyer"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death" type="Timer" parent="flyer"]

[node name="Area2D" type="Area2D" parent="flyer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flyer/Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death_sound" type="AudioStreamPlayer2D" parent="flyer"]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="idle_timer" type="Timer" parent="flyer"]
one_shot = true

[connection signal="timeout" from="flyer/death" to="flyer" method="_on_death_timeout"]
[connection signal="body_entered" from="flyer/Area2D" to="flyer" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="flyer/idle_timer" to="flyer" method="_on_idle_timer_timeout"]
